ci: fix release publishing

--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -4,15 +4,16 @@ on:
   push:
     branches: [main]
 
-permissions:
-  id-token: write
-  contents: write
-  pull-requests: write
-
 jobs:
   build-release:
     name: Build release
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+    outputs:
+      release_created: ${{ steps.release.outputs.release_created }}
+      tag_name: ${{ steps.release.outputs.tag_name }}
     steps:
       - name: Release Please
         uses: googleapis/release-please-action@v4
@@ -21,9 +22,17 @@ jobs:
           release-type: python
           token: ${{ secrets.RELEASE_PLEASE_TOKEN }}
 
-      # Below will only happen if a release was created
+  upload-artifacts:
+    name: Upload artifacts
+    runs-on: ubuntu-latest
+    needs: [build-release]
+    # Will only run if a release was created
+    if: needs.build-release.outputs.release_created == 'true'
+    permissions:
+      contents: write
+      id-token: write
+    steps:
       - uses: actions/checkout@v4
-        if: ${{ steps.release.outputs.release_created }}
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
@@ -37,7 +46,7 @@ jobs:
         run: |
           for f in dist/*; do
             echo "Uploading $f"
-            gh release upload ${{ steps.release.outputs.tag_name }} "$f"
+            gh release upload ${{ needs.build-release.outputs.tag_name }} "$f"
           done
 
       - name: Test PyPI publish
