--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -53,3 +53,6 @@ jobs:
         uses: pypa/gh-action-pypi-publish@release/v1
         with:
           repository-url: https://test.pypi.org/legacy/
+
+      - name: PyPI publish
+        uses: pypa/gh-action-pypi-publish@release/v1
