--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,9 +19,22 @@ jobs:
         run: |
           uv run --group dev ruff check .
 
+  type-check:
+    name: Type checking
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+
+      - name: Run type checking
+        run: |
+          make type-check
+
   test:
     name: Run tests
-    needs: [lint]
+    needs: [lint, type-check]
     runs-on: ubuntu-latest
     strategy:
       matrix:
