--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ classifiers=[
 [dependency-groups]
 dev = [
     "ipykernel>=6.29.5",
+    "mypy>=1.13.0",
     "pytest>=8.3.5",
     "pytest-cov>=6.1.1",
     "pyyaml>=6.0.2",
