fix(lexer): 🩹 handle escaped quotes in single-quoted strings
The lexer was incorrectly stopping at the first single quote encountered, without checking for YAML's escape sequence (two consecutive single quotes ''). This caused parsing errors for strings containing escaped quotes.

Updated _parse_quoted_scalar to detect and skip escaped single quotes by checking if a quote is followed by another quote of the same type. Added test case to verify proper parsing of complex single-quoted strings with multiple escaped quotes.

--- a/tests/test_everything.yaml
+++ b/tests/test_everything.yaml
@@ -129,3 +129,7 @@ complex_anchor_chains:
   final:
     <<: *derived2 # Final merge
     final: value3
+
+# Complex string
+config:
+  where: '{{ "my_column != date ''2025-08-31''" if target.name == ''prod'' else ''1=1'' }}'
